--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "polymer": "Polymer#^1.3.1",
     "iron-icon": "PolymerElements/iron-icon#^1.0.9",
-    "iron-icons": PolymerElements/iron-icons#^1.1.3",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-button": "PolymerElements/paper-button#^1.0.13"
   }
 }
