--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.9",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "paper-button": "PolymerElements/paper-dialog#^1.1.0"
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
   }
 }
